--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,7 @@
-ipywidgets == 8.1.3
-notebook 
-ensure == 1.0.2
-py-youtube == 1.1.7
+# ipywidgets == 8.1.3
+# notebook 
+# ensure == 1.0.2
+# py-youtube == 1.1.7
 
 # dev requirements
 pytest == 8.2.2
