--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ classifiers =
 [options]
 install_requires = 
     ensure==1.0.2
-    py-youtube==1.1.7
+
 python_requires = >=3.7
 
 [options.extras_require]
@@ -19,9 +19,9 @@ testing =
     flake8>=5.0.4
     tox>=3.25.1
     black>=22.8.0
-
+# put repo name
 [options.package_data]
-IPYNBrenderer = py.typed
+repository_name = py.typed
 
 [flake8]
 max-line-length = 160
